WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307429
[WGSL] webgpu:shader,validation,expression,call,builtin,clamp,* is failing
https://bugs.webkit.org/show_bug.cgi?id=307429
Summary
[WGSL] webgpu:shader,validation,expression,call,builtin,clamp,* is failing
Tadeu Zagallo
Reported
2026-02-10 05:33:29 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-10 05:33:37 PST
<
rdar://problem/170052903
>
Tadeu Zagallo
Comment 2
2026-02-10 05:54:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58298
EWS
Comment 3
2026-02-11 09:09:17 PST
Committed
307259@main
(914006fabddf): <
https://commits.webkit.org/307259@main
> Reviewed commits have been landed. Closing PR #58298 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug