[WGSL] webgpu:shader,validation,expression,call,builtin,clamp,* is failing https://bugs.webkit.org/show_bug.cgi?id=307429 rdar://170052903

Reviewed by Mike Wyrzykowski.

We were missing the validation that `clamp(x, low, high)` should error
if `low > high`. It also required storing extra information to handle
the case where `low` and/or `high` might be override values.

We're still failing a few tests, but they appear to be invalid tests
and we're waiting for the test suite to correct them.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/call/builtin/clamp-expected.txt:
* Source/WebGPU/WGSL/AST/ASTCallExpression.h:
* Source/WebGPU/WGSL/AST/ASTExpression.h:
(WGSL::AST::Expression::maybeEvaluation const):
(WGSL::AST::Expression::evaluation const):
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::TERNARY_OPERATION):
(WGSL::VALIDATION_FUNCTION):
* Source/WebGPU/WGSL/ConstantValue.h:
(WTF::StringTypeAdapter<WGSL::ConstantValue>::StringTypeAdapter):
(WTF::StringTypeAdapter<WGSL::ConstantValue>::length const):
(WTF::StringTypeAdapter<WGSL::ConstantValue>::is8Bit const):
(WTF::StringTypeAdapter<WGSL::ConstantValue>::writeTo const):
* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::checkReturnType):
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::pack):
* Source/WebGPU/WGSL/Overload.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::bitcast):
(WGSL::TypeChecker::evaluated):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/generator/main.rb:

Canonical link: https://commits.webkit.org/307259@main